--- a/frontend/LearnSass/style01.css
+++ b/frontend/LearnSass/style01.css
@@ -1,7 +1,31 @@
-.btn {
+.btn-red, .btn-blue, .btn-yellow {
   padding: 12px 16px;
   border: none;
   text-align: center;
   cursor: pointer;
   font-weight: bold;
+}
+
+.btn-red {
+  background-color: #F0682D;
+}
+
+.btn-red:hover {
+  background-color: #F16F69;
+}
+
+.btn-blue {
+  background-color: #62B0F1;
+}
+
+.btn-blue:hover {
+  background-color: #F16F69;
+}
+
+.btn-yellow {
+  background-color: #F4EE29;
+}
+
+.btn-yellow:hover {
+  background-color: #F16F69;
 }
