--- a/frontend/LearnSass/style01.scss
+++ b/frontend/LearnSass/style01.scss
@@ -1,15 +1,35 @@
-$color-red: red;
-$color-blue: blue;
-$color-yellow: yellow;
-
-.btn {
-    padding: 12px 16px;
-    border: none;
-    text-align: center;
-    cursor: pointer;
-    font-weight: bold;
-}
+@import './config.scss';
 
 $colors-button: (
-    red: $color-red
+    red: (
+        background: $color-red,
+        hover: $color-red-hover,
+    ),
+    blue: (
+        background: $color-blue,
+        hover: $color-blue-hover,
+    ),
+    yellow: (
+        background: $color-yellow,
+        hover: $color-yellow-hover,
+    ),
 );
+
+@each $btnName, $colorsMap in $colors-button {
+    .btn-#{$btnName} {
+        @extend %btn;
+    }
+    @each $key, $value in $colorsMap {
+        @if $key == 'background' {
+            .btn-#{$btnName} {
+                background-color: $value
+            }
+        } @else if $key == 'hover' {
+            .btn-#{$btnName} {
+                &:hover {
+                    background-color: $value;
+                }
+            }
+        }
+    }
+}
