--- a/frontend/html5NewTags/css/styles.css
+++ b/frontend/html5NewTags/css/styles.css
@@ -1,9 +1,390 @@
+/* NAVBAR */
+/* Slide Show */
+/* Main Content */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+nav {
+  background-color: #232323;
+  text-align: center;
+  width: 100%;
+  height: 50px;
+}
+nav > ul {
+  display: inline-block;
+  margin: auto;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+}
+nav > ul li {
+  list-style: none;
+  position: relative;
+}
+nav > ul li:hover > ul {
+  display: block;
+}
+nav > ul > li {
+  float: left;
+  height: 50px;
+  line-height: 50px;
+  margin-right: 50px;
+}
+nav > ul > li > a > img {
+  width: auto;
+  height: 30px;
+  margin-top: 10px;
+}
+nav > ul > li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  display: block;
+}
+nav > ul > li ul {
+  position: absolute;
+  display: none;
+  z-index: 1000;
+  top: 100%;
+  left: 0;
+  white-space: nowrap;
+  text-align: left;
+  font-size: 14px;
+  padding: 5px 0px;
+  background-color: #FFFFFF;
+}
+nav > ul > li ul li {
+  float: none;
+  height: 25px;
+  line-height: 25px;
+}
+nav > ul > li ul li a {
+  color: #333333;
+  padding: 0 25px;
+  transition: background-color 0.7s;
+}
+nav > ul > li ul li a:hover {
+  background-color: #CCCCCC;
+}
+nav > ul > li > .down {
+  color: #FFFFFF;
+  position: absolute;
+  left: 50%;
+  bottom: 0px;
+  transform: translateX(-50%);
+  z-index: 1000;
+  font-size: 12px;
+}
+nav > ul > li #logo {
+  margin-right: 150px;
+}
+nav > ul > li #redLink {
+  color: #d5282a;
+}
+nav > ul > li:hover > a {
+  text-decoration: underline;
+}
+nav ul::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+#navbar::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+#slideShow {
+  position: relative;
+}
+#slideShow img {
+  width: 100%;
+  height: auto;
+  max-height: 888px;
+  display: block;
+}
+#slideShow .arrow {
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1000;
+}
+#slideShow #arrowLeft {
+  left: 30px;
+}
+#slideShow #arrowRight {
+  right: 30px;
+}
+#slideShow .fa-chevron-circle-right, #slideShow .fa-chevron-circle-left {
+  font-size: 40px;
+  color: #d5282a;
+}
+#slideShow #logo2 {
+  width: 600px;
+  height: auto;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+#slideShow .books-group {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 130px;
+}
+#slideShow .books-group button {
+  padding: 15px 20px;
+  text-transform: uppercase;
+  margin: 0 50px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  color: #ffffff;
+  cursor: pointer;
+  transition: background-color 0.7s;
+}
+#slideShow .books-group button:hover {
+  background-color: #000000;
+}
+#slideShow #arrowDown {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 30px;
+}
+#slideShow #arrowDown .fa-chevron-circle-down {
+  font-size: 60px;
+  color: #9DBCA3;
+  cursor: pointer;
+  transition: color 0.7s;
+}
+#slideShow #arrowDown .fa-chevron-circle-down:hover {
+  color: #B42B2F;
+}
+
+#content {
+  position: relative;
+  width: 100%;
+  height: 700px;
+}
+#content #imgBlur {
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/restaurants.jpg");
+  background-size: contain;
+  filter: brightness(55%);
+  -webkit-filter: brightness(55%);
+  -moz-filter: brightness(55%);
+  display: block;
+}
+#content #chef-menu {
+  position: absolute;
+  width: 33%;
+  z-index: 1000;
+  top: 10%;
+}
+#content #chef-menu img {
+  width: 250px;
+  height: auto;
+  display: block;
+  margin: auto;
+}
+#content #chef-menu ul {
+  white-space: nowrap;
+  width: 50%;
+  margin: auto;
+}
+#content #chef-menu ul li {
+  list-style: none;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+  border-bottom: 1px solid #000000;
+}
+#content #chef-menu ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  font-size: 20px;
+  display: block;
+  transition: color 0.7s;
+}
+#content #chef-menu ul li a:hover {
+  color: #333333;
+}
+#content #advertisement {
+  width: 33%;
+  height: 100%;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-image: url("../images/icon-repeat.PNG");
+  background-repeat: repeat;
+}
+#content #advertisement #info {
+  width: 250px;
+  margin: auto;
+  margin-top: 80px;
+  padding: 5%;
+  background-color: #FFFFFF;
+  text-align: center;
+}
+#content #advertisement #info img {
+  max-width: 80%;
+  height: auto;
+  display: block;
+  margin: auto;
+}
+#content #advertisement #info span {
+  margin-top: 20px;
+  display: block;
+  font-size: 14px;
+}
+#content #advertisement a {
+  text-decoration: none;
+  border: 1px solid #FFFFFF;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  background-color: #000000;
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+}
+#content #address {
+  width: 33%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 67%;
+}
+#content #address > img {
+  max-width: 200px;
+  height: auto;
+  display: block;
+  margin: auto;
+  margin-top: 10%;
+}
+#content #address #schedules {
+  padding: 0 25%;
+  text-align: left;
+}
+#content #address #schedules a {
+  white-space: nowrap;
+  display: block;
+  margin-bottom: 20px;
+  color: #FFFFFF;
+  transition: filter 0.7s;
+  text-decoration: none;
+}
+#content #address #schedules a img {
+  display: block;
+  max-width: 30px;
+}
+#content #address #schedules a:hover {
+  filter: brightness(55%);
+  -webkit-filter: brightness(55%);
+  -moz-filter: brightness(55%);
+}
+#content #address #schedules span {
+  color: #FFFFFF;
+}
+
+footer {
+  width: 100%;
+  height: 300px;
+  padding-top: 50px;
+  background-color: #94C2AB;
+  overflow: auto;
+  position: relative;
+  color: #ffffff;
+}
+footer #left-info {
+  width: 45%;
+  height: 70%;
+  border-right: 1px solid #ffffff;
+  text-align: right;
+  padding-right: 30px;
+  color: #ffffff;
+  font-size: 14px;
+  float: left;
+}
+footer #left-info a {
+  display: inline-block;
+  padding: 10px 15px;
+  border: 1px solid #ffffff;
+  color: #ffffff;
+  background-color: transparent;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-top: 30px;
+  transition: background-color 0.7s;
+}
+footer #left-info a i {
+  margin-right: 5px;
+}
+footer #left-info a:hover {
+  background-color: #000000;
+}
+footer #center-info {
+  width: 10%;
+  height: 70%;
+  border-right: 1px solid #ffffff;
+  text-align: center;
+  float: left;
+}
+footer #center-info .icon-group {
+  margin-bottom: 20px;
+}
+footer #center-info .icon-group i {
+  margin: 7px;
+  font-size: 20px;
+  color: #ffffff;
+  transition: color 0.7s;
+}
+footer #center-info .icon-group i:hover {
+  color: #000000;
+}
+footer #right-info {
+  width: 45%;
+  text-align: left;
+  text-transform: uppercase;
+  padding-left: 20px;
+  float: left;
+}
+footer #right-info .input-groups input {
+  display: block;
+  margin: 5px;
+  padding: 8px 5px;
+  border-left: 8px solid #E4D4C0;
+  border-width: 0 0 0 8px;
+  outline: none;
+}
+footer #right-info .input-groups input:focus {
+  border-color: #000000;
+}
+footer #sign {
+  font-size: 12px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 10px;
+}
+footer #sign span {
+  color: #5d8f76;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-#navbar {
-  color: #FFFFFF;
+body {
+  background-color: aquamarine;
+  font-family: 'Open Sans', sans-serif;
 }
